# cpptruths

./: ChangeLog  README.md
algo/: bin_search.cpp  breadth_first_print.cpp  cond_var_even_odd.c  condition_var.c  condition_var2.c  eval_infix.cpp  expr_add.cpp  min_matrix_sum_path.cpp  producer_consumer.c  wiggle_sort.cpp  wiggle_sort.txt  word_search.cpp  xor-linked-list.cpp
algo/longest_compound_word/: driver.cxx  minimal.cpp
blogs/: cppblogs.opml  opml2html.xsl
c/: Thread_partA.c  Thread_partB.c  __func__.c  ackermann.c  archie_asgn.c  array_return.c  bitcount.c  bsearch.c  clist.c  comma.c  const_string_size.c  crypt_song.c  declarations.c  empty_func_para.c  fibo.c  function_ptr.c  gtkhello.c  hello.c  intel.c  interrupt.c  ipsearch.c  jmp_volatile.c  loop_change.c  main.c  min_max_time.c  permutations.c  permute_string.c  profile.c  quine2.c  recursive_chcase.c  restrict.c  return_void.c  router.c  rti_quiz.c  self_reproduce.c  self_reproduce2.c  swap.c  ternary_operator.c  test.c  thread.c  (+3 more)
c/etf/: PATTERNS  generic_list.c  generic_list.h  genjumptable.tcl  list.h  message_router.c  messageq.c  messageq.h  redirect.c  redirect.h  registrar.c  registrar.h  sampletool.c  sampletool.h  set-redir  stringtable.c  test.c  threadspec.c  threadspec.h  tools.input  wrap.tcl
c/rpc/: integer.h
cpp/: ACE_Timer.h  BFS.cpp  CRTP.cpp  IOV_Helper.h  Int2Type.cpp  Makefile.mobile_consumer  Smart_IOV_Helper.cpp  TruckDriverSemiVirtual.cpp  UndoBuffer.cpp  ace_cdr_test.cpp  address_of_protected_base_member.cpp  adl_in_template.cpp  anonymous_union.cpp  arrow.cc  assign.cpp  async_connector.cpp  auto_ptr.cpp  back_insert.cpp  bad_exception.cpp  base_assign.cpp  base_from_member.cpp  before_main.cpp  boost_mutant.cpp  callctor.cc  carrier_test.cpp  co_contra_variant.cpp  coercion.cpp  common_type.cpp  composite.cpp  concept-test.cpp  const_iterator.cpp  construction_tracker.cpp  contains_meta_program.cpp  conversion_friendly_memeber_T.cpp  count_chain.cpp  cout_cin.cpp  covariant_shared_ptr.cpp  default_constructible.cpp  derived_to_base_template.cpp  enable_if_test.cpp  (+85 more)
cpp/ACE_Reliable_Transport/: ACE_Reliable_Transport.mwc  FileTransferClient.h  README  RelDataTransferSender.cpp  SenderProtocolFactory.h  UnrelChannel.cpp  UnrelChannel.h  client.mpc  proto_handler.cpp
cpp0x/: FixedAny.cpp  SFINAE-backtrace.cpp  SmallAny.cpp  add_prefix_preprocessor.cpp  any_pattern.cpp  array_types.cpp  array_variadic_init.cpp  benchmark_error_code_vs_exceptions.cpp  bind-impl.cpp  callcc.cpp  cartesian_variadic.cpp  classless-state.cpp  compile_string_parse.cpp  copy_if.cpp  curry.cpp  curry_class_template.cpp  emplace_back.cpp  foldexpr-monad.cpp  foldexpr.cpp  foldexprbasic.cpp  fun_lambda.cpp  function_deduction_guides.cpp  function_types.cpp  function_variance.cpp  generator.cpp  idl2cpp11-piecewise-construct.cpp  init_array_w_tuple.cpp  is_lambda.cpp  is_prime.cpp  lambda_compose.cpp  lambda_traits.cpp  lifetime_extension.cpp  memoize.cpp  move_star_this.cpp  mpl_intersection.cpp  multi_inheritance.cpp  multidim_array.cpp  noexcept_move.cpp  pass-by-value-perf.cpp  propagate_const.cpp  (+17 more)
cpp0x/await_optional_int/: await_optional_int.cpp  await_optional_int.sln  await_optional_int.vcxproj  await_optional_int.vcxproj.filters
cpp0x/grpc_quick_start/: CMakeLists.txt
cpp0x/grpc_quick_start/src/: driver.cpp
cpp0x/hunter_test/: CMakeLists.txt
cpp0x/robust_typeid/: foo.cpp  foo.h  makefile  robust_typeid.cpp
cpp0x/vcpkg_test/: CMakeLists.txt
cpp0x/vcpkg_test/cmake/: AutoVcpkg.cmake
cpp0x/vcpkg_test/include/: driver.h
cpp0x/vcpkg_test/src/: driver.cpp
cpp0x/vcpkg_test/test/: driver.cxx  driver_test.cpp
java/: ConsumerDrainBenchmark.java  Headers.java  nonblocking_consumer.java
java/chat/: Kmean.java  XMLStringParser.java  input.xml  tag.java
javascript/: number_of_islands.js  reverse_linked_list.js  trampoline.cpp  trampoline.js  two_sum.js  valid_parentheses.js
networking/: getifaddrs.c  hostname.c
python/: idiom_analytics.py
rust/: hello_world.rs
rust/hello/: Cargo.toml
src/: Transposer.cpp
trunk/: ChangeLog
trunk/blogs/: bloglines-html-transform.opml  cppblogs.opml  opml2html.xsl  test.html
trunk/c/: 8qcrypt.c  all_permutations.c  args.c  attr.c  bitfields.c  bug587.c  conflict_enum.c  disable_printf.c  eval_order.c  expression_eval_order.c  field_width.c  hello.h  hello_print.c  india.c  loop.c  loop_volatile.c  lvalue.c  max.c  no-minus.c  overflow.c  percentages.c  permutations.c  preprocessor.c  quine.c  quine_smallest.c  quiz-thread.c  rdma_rc_example.c  rotate.c  router.c  router_driver.c  select.c  sizeof-macro.c  sizeof.c  sizeof_main.c  smallest.c  strcmpend.c  struct.c  switch.c  tcp_program.c  ternery.c  (+3 more)
trunk/cpp/: ACE_Timer.cpp  Int2TypeIdiom.cpp  IsDescendant.cpp  LEESA-concepts.cpp  Makefile.ace_cdr_test  Makefile.ace_test  Makefile.async_connector  Serializable.cpp  Stack.cpp  ace_test.cpp  address_of_protected_base_member.cpp  addressof.cpp  analogliterals.cpp  anonymous_union.cpp  array_index.cpp  array_size.cpp  arrayptr_type.cc  assign_inherit.cpp  async_wordsearch.cpp  attorney-client.cpp  bad_exception.cpp  binary_copy.cpp  bind2nd.cpp  boost-xml-serialization.cpp  boost_auto.cpp  boost_iterator.cpp  chain_smart.cpp  checked_delete.cpp  command_line_macro.cpp  concept-mpl.cpp  concrete_data_type.cpp  const_iterator.cpp  const_reference.cpp  const_temporary.cpp  const_typedef.cpp  construct_destruct.cpp  copy-ctor.cpp  copy_and_swap.cpp  decay.cc  default_arguments.cpp  (+110 more)
trunk/cpp0x/: ambiguous_pair.cpp  any_pattern.cpp  array_types.cpp  bench.sh  bind_lambda_creation.cpp  cartesian_variadic.cpp  constexpr-strfind.cpp  contains_variadic.cpp  continuation_factorial.cpp  corba-ref-coercion.cpp  corba-simple.cpp  enable_if.cpp  enum_iterate.cpp  (+36 more)
(+53 files in other folders)
